--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1>Tűztövis</h1>
-        <img id="bokor" src="bokor.png" alt="Szüret" title="Szüret">
-        <div id="bevezeto" class="keret">        
+        <div id="bevezeto" class="keret">   
+            <img id="bokor" src="bokor.png" alt="Szüret" title="Szüret">     
             <p>A tűztövis eredetileg a Himalája lejtőin és főként Ázsiában termő növény, de ma már meghódította az egész világot. Magyarországon is találkozhatunk vele a Duna mentén, a Balaton partján vagy a Csepel-szigeten. Nálunk védett növény.</p>
         </div>
         <h2>Egészségügyi</h2> hatásai
@@ -34,7 +34,7 @@
         <br class="blokktores">
         <h2>Csodanövény</h2>
         <div class="keret" id="erdekesseg">
-        <h2>Tudta-e?</h2>>
+        <h2>Tudta-e?</h2>
         <p>A tűztövist különböző festési célokra is használják, ugyanis vízzel átitatva sárga színt ad, amit festők, könyvkötők, bőr- és kézművesek használnak.</p>
         </div>
         <p>E-vitamint és esszenciális zsírsavakat tartalmaz, melyek jó hatással vannak a kiszáradt, berepedezett bőrre. Májelégtelenség esetén jól hasznosul más gyógynövényekkel együtt, így például a pitypanggal. A tűztöviskéreg növeli az epe kiválasztást. Érdemes cikóriával vagy gyermekláncfűvel kombinálni annak érdekében, hogy gyógyító hatását növeljük. Csökkenti a narancsbőr kialakulását, hiszen erősíti a kötőszövetet.</p>
